# wine-gdi-font-artifact-repro

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: mingw-w64-i686.cmake
